# VECTOR

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  convert_gdelt_data_v2.py  pyproject.toml
.github/workflows/: ci.yml  test-python.yml
config/: default.yaml
docs/: ARCHITECTURE.md  CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md
docs/examples/: gdelt_example.py  reddit_example.py
docs/guides/: GDELT_USAGE.md  REDDIT_SETUP.md  REDDIT_USAGE.md
examples/: edges.csv  posts.csv  taxonomy.yaml  users.csv
src/vector/: __init__.py  cli.py  config.py  pipeline.py  schemas.py  service.py  utils.py  vector_logging.py
src/vector/audience/: build.py
src/vector/compliance/: policies.py
src/vector/graph/: build.py
src/vector/ingestion/: __init__.py  adapters.py  gdelt.py  reddit.py
src/vector/measurement/: uplift.py
src/vector/nlp/: topics.py
src/vector/plugins/: __init__.py  base.py  keyword.py  linear_scorer.py  pagerank.py  selector.py
src/vector/scoring/: score.py
tests/unit/: test_plugins.py  test_smoke.py
